Fix spacing issue in scrambled text component

--- a/src/components/AnimatedSquare/AnimatedSquare.module.scss
+++ b/src/components/AnimatedSquare/AnimatedSquare.module.scss
@@ -6,29 +6,30 @@ $button-circumference: (2 * $button-width) + (2 * $button-height);
   0% {
     stroke-dasharray: $button-height $button-circumference;
     stroke-dashoffset: neg($button-width + $button-height/2);
-    stroke-width: 2px;
+    stroke-width: 0px;
   }
 
   100% {
     stroke-dasharray: $button-circumference;
     stroke-dashoffset: 0;
-    stroke-width: 4px;
+    stroke-width: 2px;
   }
 }
 
 @keyframes rotateSquare {
   0% {
     opacity: 0.2;
-    transform: rotate(0deg);
+    transform: scale(0.5) rotate(0deg);
   }
 
   100% {
     opacity: 1;
-    transform: rotate(360deg);
+    transform: scale(1) rotate(360deg);
   }
 }
 
 .SvgWrapper {
+  z-index: -1;
   cursor: pointer;
   width: 100%;
   height: 100%;
